<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gzb</name>
  <version>0.0.0</version>
    <description>
    <p>URDF Description package for new_full_arm</p>
    <p>This package contains configuration data, 3D models and launch files
for new_full_arm robot</p>
  </description>
  <maintainer email="thisum@todo.todo">thisum</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <depend>new_full_arm</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
